added grafana deployment

--- a/grafana_deployment/grafana-pvc.yaml
+++ b/grafana_deployment/grafana-pvc.yaml
@@ -5,9 +5,9 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   # name: A unique name for your PVC. This will be referenced by the Deployment.
-  name: <your-app-name>-pvc
+  name: grafana-storage-pvc
   labels:
-    app: <your-app-name>
+    app: grafana
 spec:
   # accessModes: Defines how the volume can be mounted.
   # - ReadWriteOnce (RWO): Can be mounted read-write by a single node. Common for most stateful apps.
@@ -16,11 +16,11 @@ spec:
   accessModes:
     - ReadWriteOnce
   # resources: Specifies the amount of storage requested.
-  resources:
   storageClassName: rook-ceph-rbd 
+  resources:
     requests:
       # storage: The amount of storage required (e.g., 1Gi, 10Gi, 100Mi).
-      storage: <storage-amount> # e.g., 5Gi
+      storage: 5Gi # e.g., 5Gi
   # storageClassName: (Optional but often required) The type of storage to request.
   # This MUST match a StorageClass available in your cluster (e.g., 'standard', 'gp2', 'managed-premium', 'local-storage').
   # Ask your cluster administrator if you don't know what to use.
