--- a/jellyfin_deployment/jellyfin-pvc.yaml
+++ b/jellyfin_deployment/jellyfin-pvc.yaml
@@ -5,9 +5,9 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   # name: A unique name for your PVC. This will be referenced by the Deployment.
-  name: <your-app-name>-pvc
+  name: jellyfin-pvc
   labels:
-    app: <your-app-name>
+    app: jellyfin
 spec:
   # accessModes: Defines how the volume can be mounted.
   # - ReadWriteOnce (RWO): Can be mounted read-write by a single node. Common for most stateful apps.
@@ -20,7 +20,7 @@ spec:
     storageClassName: ceph-rbd
     requests:
       # storage: The amount of storage required (e.g., 1Gi, 10Gi, 100Mi).
-      storage: <storage-amount> # e.g., 5Gi
+      storage: 10Gi # e.g., 5Gi
   # storageClassName: (Optional but often required) The type of storage to request.
   # This MUST match a StorageClass available in your cluster (e.g., 'standard', 'gp2', 'managed-premium', 'local-storage').
   # Ask your cluster administrator if you don't know what to use.
