--- a/nginx_deployment/nginx-deployment.yaml
+++ b/nginx_deployment/nginx-deployment.yaml
@@ -27,17 +27,17 @@ spec:
           name: nginx-port # Optional name for the port
         # volumeMounts: Mounts the volume requested by the PVC into the container.
         volumeMounts:
-        - name: nginx-pvc # Must match the volume name defined below in spec.volumes
+        - name: ceph-rbd # Must match the volume name defined below in spec.volumes
           # mountPath: The directory path inside the container where the storage will be accessible.
           mountPath: /mnt/cephfs # e.g., /app/data or /var/www/html
         # --- Optional but Recommended ---
-          resources:
-            requests:
-              memory: "64Mi"
-              cpu: "100m"
-            limits:
-              memory: "512Mi"
-              cpu: "750m"
+        resources:    #NEEDS to be in LINE with 'containers' section by lining up with 'name' - Caused errors
+          requests:
+            memory: "64Mi"
+            cpu: "100m"
+          limits:
+            memory: "512Mi"
+            cpu: "750m"
         # env:
         # - name: MY_ENV_VAR
         #   value: "my_value"
@@ -47,7 +47,7 @@ spec:
       # volumes: Defines the volumes available to the Pod.
       volumes:
       # - name: Must match the name used in volumeMounts above.
-      - name: nginx-pvc # e.g., app-data
+      - name: ceph-rbd # e.g., app-data
         # persistentVolumeClaim: Links this volume definition to the PVC created earlier.
         persistentVolumeClaim:
           # claimName: Must match the metadata.name of the PVC defined above.
