--- a/influxDB_deployment/influxdb-deployment.yaml
+++ b/influxDB_deployment/influxdb-deployment.yaml
@@ -26,7 +26,7 @@ spec:
         - containerPort: 8086
           name: influxDB-port # Name for the port
         volumeMounts:
-        - name: influxdb-pvc # Must match the volume name defined below
+        - name: ceph-rbd # Must match the volume name defined below
           # Mount path inside the container as requested
           mountPath: /mnt/cephfs
         # --- IMPORTANT: Configure InfluxDB to USE the mount path ---
@@ -45,12 +45,12 @@ spec:
               memory: "512Mi"
               cpu: "250m"
             limits:
-              memory: "2Gi"
+              memory: "1Gi"
               cpu: "1000m" # 1 CPU core
 
       volumes:
         # Define the volume that uses the PVC
-      - name: influxdb-pvc # Must match volumeMounts.name above
+      - name: ceph-rbd # Must match volumeMounts.name above
         persistentVolumeClaim:
           # Must match the metadata.name of the PVC defined above
           claimName: influxdb-pvc
