--- a/influxDB_deployment/influxdb-pvc.yaml
+++ b/influxDB_deployment/influxdb-pvc.yaml
@@ -10,7 +10,7 @@ spec:
   accessModes:
     # ReadWriteOnce is usually appropriate for InfluxDB unless using specific clustering.
     # CephFS also supports ReadWriteMany (RWX) if needed, but check InfluxDB compatibility.
-    - ReadWriteOnce
+    - ReadWriteMany
   storageClassName: ceph-rbd
   resources:
     requests:
