--- a/homarr_deployment/homarr-pvc.yaml
+++ b/homarr_deployment/homarr-pvc.yaml
@@ -14,7 +14,7 @@ spec:
   # - ReadOnlyMany (ROX): Can be mounted read-only by many nodes.
   # - ReadWriteMany (RWX): Can be mounted read-write by many nodes (requires capable storage like NFS).
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   # resources: Specifies the amount of storage requested.
   storageClassName: ceph-rbd 
   resources:
