Changed PVC config and deployment respectively

--- a/grafana_deployment/grafana-deployment.yaml
+++ b/grafana_deployment/grafana-deployment.yaml
@@ -8,7 +8,7 @@ metadata:
   labels:
     app: grafana
 spec:
-  replicas: 2 # e.g., 2
+  replicas: 1 # e.g., 2
   selector:
     # Must match the labels on the Pod template below.
     matchLabels:
@@ -27,7 +27,7 @@ spec:
           name: grafana-port # Optional name for the port
         # volumeMounts: Mounts the volume requested by the PVC into the container.
         volumeMounts:
-        - name: ceph-rbd # Must match the volume name defined below in spec.volumes
+        - name: microk8s-hostpath # Must match the volume name defined below in spec.volumes
           # mountPath: The directory path inside the container where the storage will be accessible.
           mountPath: /mnt/cephfs # e.g., /app/data or /var/www/html
         # --- Optional but Recommended ---
@@ -47,8 +47,8 @@ spec:
       # volumes: Defines the volumes available to the Pod.
       volumes:
       # - name: Must match the name used in volumeMounts above.
-      - name: ceph-rbd # e.g., app-data
+      - name: microk8s-hostpath # e.g., app-data
         # persistentVolumeClaim: Links this volume definition to the PVC created earlier.
         persistentVolumeClaim:
           # claimName: Must match the metadata.name of the PVC defined above.
-          claimName: grafana-storage-pvc
+          claimName: grafana-pvc
