--- a/jellyfin_deployment/jellyfin-pvc.yaml
+++ b/jellyfin_deployment/jellyfin-pvc.yaml
@@ -14,9 +14,9 @@ spec:
   # - ReadOnlyMany (ROX): Can be mounted read-only by many nodes.
   # - ReadWriteMany (RWX): Can be mounted read-write by many nodes (requires capable storage like NFS).
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   # resources: Specifies the amount of storage requested.
-  storageClassName: ceph-rbd #needs to be at this level.
+  storageClassName: microk8s-hostpath #needs to be at this level.
   resources:
     requests:
       # storage: The amount of storage required (e.g., 1Gi, 10Gi, 100Mi).
