--- a/nginx_deployment/nginx-NodePort.yaml
+++ b/nginx_deployment/nginx-NodePort.yaml
@@ -5,7 +5,7 @@ apiVersion: v1
 kind: Service
 metadata:
   # name: A unique name for the NodePort service.
-  name: nginx-svc
+  name: nginx-NodePort-svc
   labels:
     app: nginx
 spec:
