--- a/nginx_deployment/nginx-pvc.yaml
+++ b/nginx_deployment/nginx-pvc.yaml
@@ -9,19 +9,13 @@ metadata:
   labels:
     app: nginx
 spec:
-  # accessModes: Defines how the volume can be mounted.
-  # - ReadWriteOnce (RWO): Can be mounted read-write by a single node. Common for most stateful apps.
-  # - ReadOnlyMany (ROX): Can be mounted read-only by many nodes.
-  # - ReadWriteMany (RWX): Can be mounted read-write by many nodes (requires capable storage like NFS).
+  capacity:
+    storage: 5Gi # Must be >= PVC request
+  volumeMode: Filesystem
   accessModes:
-    - ReadWriteOnce
-  storageClassName: microk8s-hostpath #needs to be on this line. Issues from below.
-  # resources: Specifies the amount of storage requested.
-  resources:
-    requests:
-      # storage: The amount of storage required (e.g., 1Gi, 10Gi, 100Mi).
-      storage: 5Gi # e.g., 5Gi
-  # storageClassName: (Optional but often required) The type of storage to request.
-  # This MUST match a StorageClass available in your cluster (e.g., 'standard', 'gp2', 'managed-premium', 'local-storage').
-  # Ask your cluster administrator if you don't know what to use.
-  # storageClassName: <storage-class-name> , <cephfs-storage-class-name>  e.g., cephfs-sc
+    - ReadWriteMany # Match what NFS provides
+  persistentVolumeReclaimPolicy: Retain # Or Recycle/Delete
+  # Use hostPath pointing to your identical NFS mount point
+  hostPath:
+    path: "/mnt/cephfs/nginx-data" # Use the host path (maybe a subdirectory)
+    type: DirectoryOrCreate # Ensure the directory exists
