--- a/grafana_deployment/grafana-deployment.yaml
+++ b/grafana_deployment/grafana-deployment.yaml
@@ -27,7 +27,7 @@ spec:
           name: grafana-port # Optional name for the port
         # volumeMounts: Mounts the volume requested by the PVC into the container.
         volumeMounts:
-        - name: microk8s-hostpath # Must match the volume name defined below in spec.volumes
+        - name: synNFS # Must match the volume name defined below in spec.volumes
           # mountPath: The directory path inside the container where the storage will be accessible.
           mountPath: /mnt/cephfs # e.g., /app/data or /var/www/html
         # --- Optional but Recommended ---
@@ -47,7 +47,7 @@ spec:
       # volumes: Defines the volumes available to the Pod.
       volumes:
       # - name: Must match the name used in volumeMounts above.
-      - name: microk8s-hostpath # e.g., app-data
+      - name: synNFS # e.g., app-data
         # persistentVolumeClaim: Links this volume definition to the PVC created earlier.
         persistentVolumeClaim:
           # claimName: Must match the metadata.name of the PVC defined above.
