--- a/jellyfin_deployment/jellyfin-deployment.yaml
+++ b/jellyfin_deployment/jellyfin-deployment.yaml
@@ -27,7 +27,7 @@ spec:
           name: jellyfin-port # Optional name for the port
         # volumeMounts: Mounts the volume requested by the PVC into the container.
         volumeMounts:
-        - name: microk8s-hostpath # Must match the volume name defined below in spec.volumes
+        - name: synNFS # Must match the volume name defined below in spec.volumes
           # mountPath: The directory path inside the container where the storage will be accessible.
           mountPath: /mnt/cephfs # e.g., /app/data or /var/www/html
         # --- Optional but Recommended ---
@@ -35,9 +35,9 @@ spec:
          requests:
            memory: "256Mi"
            cpu: "500m"
-        #limits:
-        #   memory: "2048Mi"
-        #   cpu: "2000m"
+         limits:
+            memory: "2048Mi"
+            cpu: "2000m"
         # env:
         # - name: MY_ENV_VAR
         #   value: "my_value"
@@ -47,7 +47,7 @@ spec:
       # volumes: Defines the volumes available to the Pod.
       volumes:
       # - name: Must match the name used in volumeMounts above.
-      - name: microk8s-hostpath # e.g., app-data
+      - name: synNFS # e.g., app-data
         # persistentVolumeClaim: Links this volume definition to the PVC created earlier.
         persistentVolumeClaim:
           # claimName: Must match the metadata.name of the PVC defined above.
