--- a/nginx_deployment/nginx-NodePort.yaml
+++ b/nginx_deployment/nginx-NodePort.yaml
@@ -5,7 +5,7 @@ apiVersion: v1
 kind: Service
 metadata:
   # name: A unique name for the NodePort service.
-  name: nginx-NodePort-svc
+  name: nginx-nodeport-svc   #needs to be all lower case
   labels:
     app: nginx
 spec:
