--- a/nginx_deployment/nginx-deployment.yaml
+++ b/nginx_deployment/nginx-deployment.yaml
@@ -47,7 +47,7 @@ spec:
       # volumes: Defines the volumes available to the Pod.
       volumes:
       # - name: Must match the name used in volumeMounts above.
-      - name: synNFS # e.g., app-data
+      - name: synnfs # e.g., app-data
         # persistentVolumeClaim: Links this volume definition to the PVC created earlier.
         persistentVolumeClaim:
           # claimName: Must match the metadata.name of the PVC defined above.
