--- a/nginx_deployment/nginx-deployment.yaml
+++ b/nginx_deployment/nginx-deployment.yaml
@@ -27,7 +27,7 @@ spec:
           name: nginx-port # Optional name for the port
         # volumeMounts: Mounts the volume requested by the PVC into the container.
         volumeMounts:
-        - name: synNFS # Must match the volume name defined below in spec.volumes
+        - name: synnfs # Must match the volume name defined below in spec.volumes
           # mountPath: The directory path inside the container where the storage will be accessible.
           mountPath: "/mnt/microk8s/nginx-data" # e.g., /app/data or /var/www/html
         # --- Optional but Recommended ---
