Update template files and add PV file for NFS storage usage.

--- a/templates/app-NodePort.yaml
+++ b/templates/app-NodePort.yaml
@@ -5,7 +5,7 @@ apiVersion: v1
 kind: Service
 metadata:
   # name: A unique name for the NodePort service.
-  name: <your-app-name>-nodeport-svc
+  name: <your-app-name>-nodeport-svc  #needs to stay all lowercase
   labels:
     app: <your-app-name>
 spec:
