--- a/influxDB_deployment/influxdb-pvc-nfs.yaml
+++ b/influxDB_deployment/influxdb-pvc-nfs.yaml
@@ -6,15 +6,15 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nginx-pvc  #pvc claim name
+  name: influxdb-pvc  #pvc claim name
   labels:
-    app: nginx
+    app: influxdb
 spec:
   accessModes:
     - ReadWriteMany  #needs to be Many since shared location
   resources:
     requests:
-      storage: 5Gi  #Must be equal or less than PV claim
+      storage: 10Gi  #Must be equal or less than PV claim
   selector:
     matchLabels:
-      app: nginx # This label should match the labels of your PV
+      app: influxdb # This label should match the labels of your PV
