--- a/postgreSQL_deployment/postgre-pvc-nfs.yaml
+++ b/postgreSQL_deployment/postgre-pvc-nfs.yaml
@@ -6,15 +6,15 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: homarr-pvc  #pvc claim name
+  name: postgre-pvc  #pvc claim name
   labels:
-    app: homarr
+    app: postgreSQL
 spec:
   accessModes:
-    - ReadWriteMany  #needs to be Many since shared location
+    - ReadWriteOnce  #needs to be Many since shared location
   resources:
     requests:
-      storage: 5Gi  #Must be equal or less than PV claim
+      storage: 10Gi  #Must be equal or less than PV claim
   selector:
     matchLabels:
-      app: homarr # This label should match the labels of your PV
+      app: postgreSQL # This label should match the labels of your PV
