--- a/grafana_deployment/grafana-pv-nfs.yaml
+++ b/grafana_deployment/grafana-pv-nfs.yaml
@@ -14,7 +14,8 @@ spec:
   accessModes:
     - ReadWriteMany #same as PVC for shared location.
   persistentVolumeReclaimPolicy: Retain # Or Recycle/Delete, choose what happens to the NFS data when the PV is released
+  storageClassName: nfs-syn
   nfs:
     server: 10.0.150.10 # Replace with the actual IP or hostname of your NFS server / ex. 10.0.150.10
     #Path defined here HAS to exist in the directory. Will NOT create a directory for the app.
-    path: /volume1/microk8s/grafana # Replace with the actual export path on your NFS server / ex. /volume1/microk8s/nginx
+    path: /volume1/microk8s # Replace with the actual export path on your NFS server / ex. /volume1/microk8s/nginx
