--- a/grafana_deployment/grafana-pvc-nfs.yaml
+++ b/grafana_deployment/grafana-pvc-nfs.yaml
@@ -10,6 +10,7 @@ metadata:
   labels:
     app: grafana
 spec:
+  storageClassName: nfs-syn
   accessModes:
     - ReadWriteMany  #needs to be Many since shared location
   resources:
